Implemented Fetch All users API
